--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "gatsby": "^1.9.247",
     "gatsby-link": "^1.6.40",
     "gatsby-plugin-react-helmet": "^2.0.10",
+    "gatsby-plugin-sharp": "^2.2.18",
+    "gatsby-remark-images": "^3.1.19",
+    "gatsby-remark-lazy-load": "^1.0.1",
     "react-helmet": "^5.2.0"
   },
   "keywords": [
@@ -23,7 +26,7 @@
     "prettier": "^1.12.0"
   },
   "repository": {
-    "type" : "git",
-    "url" : "https://github.com/gatsbyjs/gatsby-starter-default"
+    "type": "git",
+    "url": "https://github.com/gatsbyjs/gatsby-starter-default"
   }
 }
